feat: add doc albums
